--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@vue-macros/volar": "^0.18.1",
         "axios": "^1.6.1",
         "laravel-vite-plugin": "^0.8.1",
+        "lodash": "^4.17.21",
         "unplugin-vue-define-options": "^1.4.1",
         "vite": "^4.0.0",
         "vue": "^3.2.36"
